--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Trilha de CSS - DIO</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header class="banner">
@@ -14,7 +15,7 @@
       </div>
       <h1>Trilha de CSS da DIO</h1>
       <p>A nova Trilha de CSS da DIO está disponível. Acesse já e aprenda do zero como desenvolver sites profissionais.</p>
-      <button>Quero me inscrever</button>
+      <button id="inscrever">Quero me inscrever</button>
     </div>
   </header>
   <main>
@@ -26,17 +27,18 @@
       </p>
       <div class="modules-list">
         <div class="module">
-          <span>Módulo 01:</span> primeiros passos com CSS
+          <span>Módulo 01:</span> <h3>primeiros passos com CSS</h3>
         </div>
         <div class="module">
-          <span>Módulo 02:</span> trabalhando com layouts no CSS
+          <span>Módulo 02:</span> <h3>trabalhando com layouts no CSS</h3>
         </div>
         <div class="module">
-          <span>Módulo 03:</span> refinando os estilos CSS das nossas páginas
+          <span>Módulo 03:</span> <h3>os estilos CSS das nossas páginas</h3> 
         </div>
       </div>
     </section>
     <section id="transform-world">
+      <img id="mulher" src="assets/images/woman-code.png" alt="">
       <p>TRANSFORME O MUNDO COM A GENTE</p>
     </section>
     <section id="professional-challenges">
